--- a/box_bringup/box_launch/tmux/box_nuc_calib_lidar.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc_calib_lidar.yaml
@@ -19,7 +19,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_launch)/multi_launch/nuc_calib_lidar.launch
+            $(rospack find launch_nuc)/launch/nuc_calib_lidar.launch
             "
           use_gui:=false
     - shell_command:
