--- a/box_bringup/box_launch/tmux/box_replay.yaml
+++ b/box_bringup/box_launch/tmux/box_replay.yaml
@@ -15,7 +15,7 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch box_launch replay.launch
+      - roslaunch launch_replay replay.launch
 
     - shell_command:
       - source /opt/ros/noetic/setup.bash
