--- a/box_bringup/box_launch/tmux/box_nuc_calib_lidar.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc_calib_lidar.yaml
@@ -17,7 +17,7 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch box_launch fkie.launch
+      - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
             $(rospack find launch_nuc)/launch/nuc_calib_lidar.launch
             "
