--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -8,6 +8,7 @@
   <author email="jonfrey@ethz.ch">Jonas Frey</author>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>scripts</depend>
   <depend>bringup_alphasense</depend>
   <depend>bringup_hesai</depend>
   <depend>bringup_hdr</depend>
