--- a/box_launch/scripts/CMakeLists.txt
+++ b/box_launch/scripts/CMakeLists.txt
@@ -9,7 +9,7 @@
 # See the License for more information.
 #=============================================================================
 cmake_minimum_required(VERSION 3.10)
-project(scripts)
+project(launch_scripts)
 
 #==
 # Dependencies
