--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -9,12 +9,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>launch_scripts</depend>
-  <depend>bringup_alphasense</depend>
   <depend>bringup_hesai</depend>
-  <depend>bringup_hdr</depend>
-  <depend>bringup_imu</depend>
-  <depend>bringup_livox</depend>
   <depend>bringup_totalstation</depend>
+  <depend>bringup_adis16448_versavis</depend>
   <depend>bringup_adis16475</depend>
   <depend>bringup_stim320</depend>
   <exec_depend>bringup_fkie</exec_depend>
