--- a/box_launch/tmux/box_pi.yaml
+++ b/box_launch/tmux/box_pi.yaml
@@ -16,7 +16,7 @@ windows:
   panes:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source devel/setup.bash
+      - source /home/ubuntu/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
             $(rospack find launch_pi)/launch/box_pi.launch
@@ -24,7 +24,7 @@ windows:
           use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/ubuntu/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
       - df -h $HOME
       focus: true
