depend on alphasense driver

--- a/box_bringup/bringup_alphasense/core_research/package.xml
+++ b/box_bringup/bringup_alphasense/core_research/package.xml
@@ -6,6 +6,7 @@
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>alphasense_driver_ros</depend>
   <export>
   </export>
 </package>
