--- a/box_bringup/bringup_alphasense/core_research/package.xml
+++ b/box_bringup/bringup_alphasense/core_research/package.xml
@@ -7,6 +7,7 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>alphasense_driver_ros</depend>
+  <depend>raw_image_pipeline_ros</depend>
   <export>
   </export>
 </package>
