--- a/box_model/box_model/urdf/box/calibrations/default_calibration.yaml
+++ b/box_model/box_model/urdf/box/calibrations/default_calibration.yaml
@@ -133,17 +133,17 @@ hesai_to_livox:
   yaw: -1.57079632679
 
 alphasense_front_left_to_imu_stim320:
-  x: 0.2
-  y: 0.0
-  z: 0.0
-  roll: 0.0
-  pitch: 0.0
+  x: 0.054
+  y: 0.07
+  z: -0.06
+  roll: 1.57079632679
+  pitch: -1.57079632679
   yaw: 0.0
 
 alphasense_front_left_to_imu_adis16475:
-  x: 0.0
-  y: 0.2
-  z: 0.0
-  roll: 0.0
+  x: 0.054
+  y: 0.03
+  z: -0.03
+  roll: 1.57079632679
   pitch: 0.0
   yaw: 0.0
