--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "box_drivers/zed-ros-wrapper"]
 	path = box_drivers/zed-ros-wrapper
 	url = git@github.com:stereolabs/zed-ros-wrapper.git
+[submodule "box_drivers/adis16475_node"]
+	path = box_drivers/adis16475_node
+	url = git@github.com:leggedrobotics/adis16475_node.git
+[submodule "box_drivers/ADIS16475-raspi"]
+	path = box_drivers/ADIS16475-raspi
+	url = git@github.com:leggedrobotics/ADIS16475-raspi.git
