--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -20,5 +20,5 @@
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
   <depend>box_health</depend>
-  <depend>core_throttling</depend>
+  <depend>box_throttling</depend>
 </package>
