--- a/box_launch/launch_replay/package.xml
+++ b/box_launch/launch_replay/package.xml
@@ -15,5 +15,5 @@
   <depend>box_rviz</depend>
   <depend>box_health</depend>
   <depend>box_model</depend>
-  <depend>core_throttling</depend>
+  <depend>box_throttling</depend>
 </package>
