stop gpio triggering when stopping tmux

--- a/box_launch/launch_pi/package.xml
+++ b/box_launch/launch_pi/package.xml
@@ -12,4 +12,5 @@
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_health</depend>
   <depend>bringup_adis16475</depend>
+  <depend>camera_trigger</depend>
 </package>
