--- a/box_utils/box_throttling/package.xml
+++ b/box_utils/box_throttling/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>core_throttling</name>
+  <name>box_throttling</name>
   <version>0.0.0</version>
   <description>The throttling package</description>
 
