--- a/box_drivers/ap20_timestamper/package.xml
+++ b/box_drivers/ap20_timestamper/package.xml
@@ -6,6 +6,12 @@
   <maintainer email="bkrumme@student.ethz.ch">Benjamin Krummenacher</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <export>
   </export>
 </package>
