--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -14,6 +14,7 @@
   <depend>bringup_livox</depend>
   <depend>bringup_gps</depend>
   <depend>bringup_stim320</depend>
+  <depend>bringup_ap20</depend>
   <depend>bringup_zed2i</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_recording</depend>
