--- a/box_utils/box_recording/cfg/box_uncompressed.yaml
+++ b/box_utils/box_recording/cfg/box_uncompressed.yaml
@@ -28,6 +28,7 @@ jetson:
     - /gt_box/rover/piksi/position_receiver_0/ros/receiver_state
     - /gt_box/rover/piksi/position_receiver_0/sbp/base_pos_ecef
     - /gt_box/rover/piksi/position_receiver_0/ros/time_ref
+    - /gt_box/rover/piksi_reference/position_receiver_0/ros/baseline_ned
   zed2i:
     - /gt_box/zed2i/joint_states
     - /gt_box/zed2i/zed_node/confidence/confidence_map
@@ -40,6 +41,9 @@ jetson:
     - /gt_box/zed2i/zed_node/rgb_raw/image_raw_color
     - /gt_box/zed2i/zed_node/left_raw/image_raw_color
     - /gt_box/zed2i/zed_node/right_raw/image_raw_color
+  ap20:
+    - /gt_box/ap20_imu
+    - /gt_box/ap20_prism_position
   tf:
     - /tf_static
     - /tf
