--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -10,7 +10,7 @@
 
   <depend>launch_scripts</depend>
   <depend>bringup_hesai</depend>
-  <depend>bringup_totalstation</depend>
+  <depend>bringup_ap20</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
