--- a/box_configuration/jetson/01-network-manager-all.yaml
+++ b/box_configuration/jetson/01-network-manager-all.yaml
@@ -7,7 +7,11 @@ network:
         - 192.168.2.51/24
       dhcp4: no
     mgbe1:
-      mtu: 7260
       addresses:
         - 192.168.20.1/24
+      dhcp4: no
+    usb0:
+      routes:
+        - to: 192.168.2.40
+          scope: link
       dhcp4: no
