ap20 network works if ap20 connected after boot

--- a/box_configuration/jetson/01-network-manager-all.yaml
+++ b/box_configuration/jetson/01-network-manager-all.yaml
@@ -15,3 +15,8 @@ network:
         - to: 192.168.2.40
           scope: link
       dhcp4: no
+    usb1:
+      routes:
+        - to: 192.168.2.40
+          scope: link
+      dhcp4: no
