--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -6,7 +6,7 @@ jetson:
     - /gt_box/alphasense_driver_node/cam3/compressed
     - /gt_box/alphasense_driver_node/cam4/compressed
   hesai:
-    - /gt_box/hesai/pandar_packets
+    - /gt_box/hesai/pandar
   livox:
     - /gt_box/livox/imu
     - /gt_box/livox/lidar
