--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -9,7 +9,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>launch_scripts</depend>
-  <depend>bringup_totalstation</depend>
+  <depend>bringup_hesai</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
