--- a/box_utils/box_recording/cfg/calib_camera_front_lidar.yaml
+++ b/box_utils/box_recording/cfg/calib_camera_front_lidar.yaml
@@ -3,6 +3,10 @@ jetson:
     - /gt_box/alphasense_driver_node/cam0/compressed
     - /gt_box/alphasense_driver_node/cam1/compressed
     - /gt_box/alphasense_driver_node/cam2/compressed
+  zed2i:
+    - /gt_box/zed2i/zed_node/rgb_raw/image_raw_color/compressed
+    - /gt_box/zed2i/zed_node/left_raw/image_raw_color/compressed
+    - /gt_box/zed2i/zed_node/right_raw/image_raw_color/compressed
   hesai:
     - /gt_box/hesai/pandar
   livox:
