Gating nuc startup on jetson ptp master published

--- a/box_configuration/jetson/sync_time_once.service
+++ b/box_configuration/jetson/sync_time_once.service
@@ -1,5 +1,5 @@
 [Unit]
-Description= Get time from internet
+Description= Get time from Jetson RTC Hardware Clock
 After=network-online.target
 
 [Service]
