--- a/box_configuration/nuc/autostart_tmux.service
+++ b/box_configuration/nuc/autostart_tmux.service
@@ -3,12 +3,13 @@ Description=Autostart Terminal and Run tmuxp
 After=network-online.target
 After=phc2sys_system.service
 After=ptp4l.service
+Requires=wait_for_jetson_once.service
 After=wait_for_jetson_once.service
 
 [Service]
 Type=forking
 ExecStartPre=/bin/sleep 30
-ExecStart=/usr/bin/tmuxp load /home/rsl/catkin_ws/src/grand_tour_box/box_bringup/box_launch/tmux/box_nuc.yaml -d
+ExecStart=/usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/box_nuc.yaml -d
 User=rsl
 
 [Install]
