--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -17,6 +17,7 @@
   <depend>bringup_ap20</depend>
   <depend>bringup_zed2i</depend>
   <exec_depend>bringup_fkie</exec_depend>
+  <depend>box_launch</depend>
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
   <depend>box_health</depend>
