--- a/box_launch/launch_pi/package.xml
+++ b/box_launch/launch_pi/package.xml
@@ -13,4 +13,5 @@
   <depend>box_health</depend>
   <depend>bringup_adis16475</depend>
   <depend>camera_trigger</depend>
+  <depend>box_launch</depend>
 </package>
