--- a/box_launch/launch_replay/package.xml
+++ b/box_launch/launch_replay/package.xml
@@ -16,4 +16,6 @@
   <depend>box_health</depend>
   <depend>box_model</depend>
   <depend>box_throttling</depend>
+  <depend>box_launch</depend>
+
 </package>
