--- a/box_launch/tmux/nuc_calib_camera.yaml
+++ b/box_launch/tmux/nuc_calib_camera.yaml
@@ -1,4 +1,4 @@
-session_name: box_jetson
+session_name: nuc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,8 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.51:11311
-    - export ROS_IP=192.168.2.51
+    - export ROS_MASTER_URI=http://192.168.2.56:11311
+    - export ROS_IP=192.168.2.56
 
   options:
     pane-border-status: top
@@ -19,12 +19,12 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_jetson)/launch/jetson_calib_lidar.launch
+            $(rospack find launch_nuc)/launch/nuc_calib_camera.launch
             "
           use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh  
+      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
       - df -h $HOME
       focus: true
