--- a/box_launch/tmux/nuc_recording.yaml
+++ b/box_launch/tmux/nuc_recording.yaml
@@ -1,4 +1,4 @@
-session_name: box_opc
+session_name: nuc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,9 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.151:11311
-    - export ROS_IP=192.168.2.151
-
+    - export ROS_MASTER_URI=http://192.168.2.56:11311
+    - export ROS_IP=192.168.2.56
 
   options:
     pane-border-status: top
@@ -20,9 +19,9 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_opc)/launch/box_opc.launch
+            $(rospack find launch_nuc)/launch/box_nuc.launch
             "
-          use_gui:=true
+          use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
