--- a/box_launch/tmux/opc_calib_imu.yaml
+++ b/box_launch/tmux/opc_calib_imu.yaml
@@ -1,4 +1,4 @@
-session_name: box_jetson
+session_name: opc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,8 +8,9 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.51:11311
-    - export ROS_IP=192.168.2.51
+    - export ROS_MASTER_URI=http://192.168.2.151:11311
+    - export ROS_IP=192.168.2.151
+
 
   options:
     pane-border-status: top
@@ -19,12 +20,12 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_jetson)/launch/jetson_calib_imu.launch
+            $(rospack find launch_opc)/launch/opc_calib_imu.launch
             "
-          use_gui:=false
+          use_gui:=true
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh  
+      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
       - df -h $HOME
       focus: true
