--- a/box_launch/tmux/pi_recording.yaml
+++ b/box_launch/tmux/pi_recording.yaml
@@ -1,4 +1,4 @@
-session_name: box_nuc
+session_name: pi
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,23 +8,25 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.56:11311
-    - export ROS_IP=192.168.2.56
+    - export ROS_MASTER_URI=http://192.168.2.57:11311
+    - export ROS_IP=192.168.2.57
+    # ping own ip until it is reachable
+    - until ping -c1 192.168.2.57 >/dev/null 2>&1; do :; done
 
   options:
     pane-border-status: top
   panes:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/rsl/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_nuc)/launch/nuc_calib_camera.launch
+            $(rospack find launch_pi)/launch/box_pi.launch
             "
           use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/ubuntu/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
       - df -h $HOME
       focus: true
