--- a/box_launch/tmux/jetson_calib_imu.yaml
+++ b/box_launch/tmux/jetson_calib_imu.yaml
@@ -1,4 +1,4 @@
-session_name: box_jetson
+session_name: jetson
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -19,7 +19,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_jetson)/launch/box_jetson.launch
+            $(rospack find launch_jetson)/launch/jetson_calib_imu.launch
             "
           use_gui:=false
     - shell_command:
