--- a/box_launch/tmux/jetson_recording.yaml
+++ b/box_launch/tmux/jetson_recording.yaml
@@ -1,4 +1,4 @@
-session_name: box_opc
+session_name: jetson
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,9 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.151:11311
-    - export ROS_IP=192.168.2.151
-
+    - export ROS_MASTER_URI=http://192.168.2.51:11311
+    - export ROS_IP=192.168.2.51
 
   options:
     pane-border-status: top
@@ -20,12 +19,12 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_opc)/launch/opc_calib_lidar.launch
+            $(rospack find launch_jetson)/launch/jetson_recording.launch
             "
-          use_gui:=true
+          use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
+      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh  
       - df -h $HOME
       focus: true
