--- a/box_launch/tmux/opc_calib_camera.yaml
+++ b/box_launch/tmux/opc_calib_camera.yaml
@@ -1,4 +1,4 @@
-session_name: box_opc
+session_name: opc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -20,7 +20,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_opc)/launch/opc_calib_imu.launch
+            $(rospack find launch_opc)/launch/opc_calib_camera.launch
             "
           use_gui:=true
     - shell_command:
