--- a/box_launch/tmux/pi_calib_lidar.yaml
+++ b/box_launch/tmux/pi_calib_lidar.yaml
@@ -1,4 +1,4 @@
-session_name: box_pi
+session_name: pi
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -21,7 +21,7 @@ windows:
       - source /home/rsl/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_pi)/launch/pi_calib_imu.launch
+            $(rospack find launch_pi)/launch/pi_calib_lidar.launch
             "
           use_gui:=false
     - shell_command:
