reverted renaming of box_launch package

--- a/box_launch/box_launch/package.xml
+++ b/box_launch/box_launch/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>launch_box</name>
+  <name>box_launch</name>
   <version>1.0.0</version>
-  <description>RSL's launch_box package.</description>
+  <description>RSL's box_launch package.</description>
   <license>Proprietary</license>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <author email="jonfrey@ethz.ch">Jonas Frey</author>
