--- a/box_configuration/nuc/phc2sys_enp46s0.service
+++ b/box_configuration/nuc/phc2sys_enp46s0.service
@@ -6,7 +6,7 @@ After=ptp4l.service
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/phc2sys -w -s CLOCK_REALTIME -c enp46s0
+ExecStart=/usr/sbin/phc2sys -c enp46s0 -s CLOCK_REALTIME -O 0 -S 1.0
 
 [Install]
 WantedBy=multi-user.target
