Replaced default calibration data with new field names

--- a/box_model/box_model/urdf/box/calibrations/old_calibration.yaml
+++ b/box_model/box_model/urdf/box/calibrations/old_calibration.yaml
@@ -1,3 +1,4 @@
+# Was present when I inherited the box. Keeping to make sure.
 alphasense_front_left_to_alphasense_front_middle:
   pitch: 0.0
   roll: 0.0
