--- a/box_utils/box_calibration/calibration_default_data/default_calibration_old.yaml
+++ b/box_utils/box_calibration/calibration_default_data/default_calibration_old.yaml
@@ -1,5 +1,5 @@
 # Default calibration, hand aligned
-# TODO(kappi): Replace with CAD values for new calib relationships.
+# TODO(kappi): Delete once default_calibration.yaml is fully populated with CAD values for new calib relationships.
 
 box_base_to_cameras_front:
   x: 0.45
