--- a/box_utils/box_fan_control/CMakeLists.txt
+++ b/box_utils/box_fan_control/CMakeLists.txt
@@ -19,14 +19,14 @@ find_package(catkin REQUIRED COMPONENTS
             std_msgs
 )
 
-add_service_files(
-    FILES
-)
+#add_service_files(
+#    FILES
+#)
 
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
+#generate_messages(
+#  DEPENDENCIES
+#  std_msgs
+#)
 
 
 #==
