--- a/box_bringup/bringup_zed2i/config/params.yaml
+++ b/box_bringup/bringup_zed2i/config/params.yaml
@@ -27,7 +27,6 @@ general:
     camera_model:               'zed2i'
     grab_resolution:            'HD1080'     # 'HD2K', 'HD1080', 'HD720', 'VGA', 'AUTO'
     grab_frame_rate:            30          # Frequency of frame grabbing for internal SDK operations
-
     
     camera_name:                zed2i                             # A name for the camera (can be different from camera model and node name and can be overwritten by the launch file)
     zed_id:                     0
@@ -38,7 +37,7 @@ general:
     svo_compression:            2                               # `0`: LOSSLESS, `1`: AVCHD, `2`: HEVC
     self_calib:                 true                            # enable/disable self calibration at starting
     camera_flip:                'AUTO'                          # camera flip mode: 'OFF', 'ON', 'AUTO'
-    pub_resolution:             'CUSTOM'                        # The resolution used for output. 'NATIVE' to use the same `general.grab_resolution` - `CUSTOM` to apply the `general.pub_downscale_factor` downscale factory to reduce bandwidth in transmission
+    pub_resolution:             'NATIVE'                        # The resolution used for output. 'NATIVE' to use the same `general.grab_resolution` - `CUSTOM` to apply the `general.pub_downscale_factor` downscale factory to reduce bandwidth in transmission
     pub_downscale_factor:       2.0                             # rescale factor used to rescale image before publishing when 'pub_resolution' is 'CUSTOM'
     pub_frame_rate:             30.0                            # frequency of publishing of video and depth data (see SDK API "InitParameters::grab_compute_capping_fps")
     svo_realtime:               true                            # if true the input SVO will be played trying to respect the original framerate eventually skipping frames, otherwise every frame will be processed respecting the `pub_frame_rate` setting
