--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -2,14 +2,13 @@
 <package format="2">
   <name>launch_opc</name>
   <version>1.0.0</version>
-  <description>RSL's launch_jetson package.</description>
+  <description>RSL's launch_opc package.</description>
   <license>Proprietary</license>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <author email="jonfrey@ethz.ch">Jonas Frey</author>
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>launch_scripts</depend>
-  <depend>bringup_hesai</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
