--- a/box_utils/box_health/package.xml
+++ b/box_utils/box_health/package.xml
@@ -4,8 +4,9 @@
   <version>1.0.0</version>
   <description>Box rviz</description>
   <license>Proprietary</license>
-  <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
+  <author email="jonfrey@ethz.ch">Jonas Frey</author>
   <author email="schmirob@ethz.ch">Robin Schmid</author>
+  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
