--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,12 +7,12 @@ repos:
     hooks:
       - id: black
         language_version: python3
-  - repo: https://github.com/pycqa/flake8
-    rev: 3.7.9
+        args: [--line-length=120]
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
     hooks:
       - id: flake8
-        additional_dependencies:
-          - flake8-black>=0.1.1
+        args: [--max-line-length=120, "--ignore=E402,E501,W503,C901,E731,W605,E722", "--extend-ignore=E203", "--exclude=_*,.vscode,.git"]
         language_version: python3
   - repo: local
     hooks:
@@ -26,4 +26,5 @@ repos:
     rev: v4.5.0 # Use the version you want
     hooks:
       - id: check-added-large-files
-        args: ["--maxkb=2000"]
+        args: ["--maxkb=2000"]  
+
