--- a/box_drivers/ap20_driver/ap20_driver_ros/CMakeLists.txt
+++ b/box_drivers/ap20_driver/ap20_driver_ros/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.9)
-project(ap20_timestamper)
+project(ap20_driver_ros)
 find_package(catkin REQUIRED COMPONENTS
     roscpp
     std_msgs
@@ -15,12 +15,12 @@ include_directories(
     ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(ap20_timestamper src/main.cpp)
+add_executable(ap20_driver_ros src/main.cpp)
 
-target_link_libraries(ap20_timestamper
+target_link_libraries(ap20_driver_ros
   ${catkin_LIBRARIES}
 )
 
-install(TARGETS ap20_timestamper
+install(TARGETS ap20_driver_ros
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
