--- a/box_launch/tmux/pi_recording.yaml
+++ b/box_launch/tmux/pi_recording.yaml
@@ -21,7 +21,7 @@ windows:
       - source /home/rsl/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_pi)/launch/box_pi.launch
+            $(rospack find launch_pi)/launch/pi_recording.launch
             "
           use_gui:=false
     - shell_command:
