--- a/.gitmodules
+++ b/.gitmodules
@@ -18,9 +18,9 @@
 	path = box_drivers/multimaster_fkie
 	url = git@github.com:leggedrobotics/multimaster_fkie.git
 	branch = grandTour
-[submodule "box_drivers/stim320_ros"]
-	path = box_drivers/stim320_ros
-	url = git@github.com:leggedrobotics/stim320_ros.git
+[submodule "box_drivers/stim320_driver"]
+	path = box_drivers/stim320_driver
+	url = git@github.com:leggedrobotics/stim320_driver
 	branch = master
 [submodule "box_drivers/hdr_camera_driver"]
 	path = box_drivers/hdr_camera_driver
