--- a/box_utils/box_recording/cfg/calib_camera_left_lidar.yaml
+++ b/box_utils/box_recording/cfg/calib_camera_left_lidar.yaml
@@ -2,7 +2,7 @@ jetson:
   alphasense:
     - /gt_box/alphasense_driver_node/cam3/compressed
   hesai:
-    - /gt_box/hesai/pandar
+    - /gt_box/hesai/points
   livox:
     - /gt_box/livox/lidar
   utils:
