--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -11,7 +11,8 @@ jetson:
     - /gt_box/alphasense_driver_node/cam4/color/image/compressed
     - /gt_box/alphasense_driver_node/cam4/color/camera_info
   hesai:
-    - /gt_box/hesai/pandar_packets
+    - /gt_box/hesai/packets
+    - /gt_box/hesai/points
   livox:
     - /gt_box/livox/imu
     - /gt_box/livox/lidar
