Enabling and disabling of lidars working

--- a/box_utils/box_power_control/CMakeLists.txt
+++ b/box_utils/box_power_control/CMakeLists.txt
@@ -8,7 +8,7 @@
 # See the License for more information.
 #=============================================================================
 cmake_minimum_required(VERSION 3.10)
-project(box_fan_control)
+project(box_power_control)
 
 #==
 # Dependencies
