--- a/box_bringup/bringup_hesai/package.xml
+++ b/box_bringup/bringup_hesai/package.xml
@@ -7,6 +7,7 @@
   <license>Proprietary</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>hesai_ros_driver</depend>
+  <depend>box_power_control</depend>
   <export>
   </export>
 </package>
