--- a/box_bringup/bringup_zed2i/config/params.yaml
+++ b/box_bringup/bringup_zed2i/config/params.yaml
@@ -36,7 +36,7 @@ general:
     sdk_verbose:                1                               # Set verbose level of the ZED SDK
     svo_compression:            2                               # `0`: LOSSLESS, `1`: AVCHD, `2`: HEVC
     self_calib:                 true                            # enable/disable self calibration at starting
-    camera_flip:                'AUTO'                          # camera flip mode: 'OFF', 'ON', 'AUTO'
+    camera_flip:                'OFF'                          # camera flip mode: 'OFF', 'ON', 'AUTO'
     pub_resolution:             'NATIVE'                        # The resolution used for output. 'NATIVE' to use the same `general.grab_resolution` - `CUSTOM` to apply the `general.pub_downscale_factor` downscale factory to reduce bandwidth in transmission
     pub_downscale_factor:       2.0                             # rescale factor used to rescale image before publishing when 'pub_resolution' is 'CUSTOM'
     pub_frame_rate:             30.0                            # frequency of publishing of video and depth data (see SDK API "InitParameters::grab_compute_capping_fps")
