--- a/box_configuration/pi/autostart_set_fan_speed.service
+++ b/box_configuration/pi/autostart_set_fan_speed.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=Set fan speed
+After=network-online.target
 
 [Service]
 Type=forking
-ExecStart=/usr/bin/python3 /home/rsl/catkin_ws/src/grand_tour_box/box_utils/box_fan_control/scripts/set_fan_speed.py
+ExecStartPre=/bin/sleep 5
+ExecStart=/usr/bin/python3 /home/rsl/git/grand_tour_box/box_utils/box_fan_control/scripts/set_fan_speed.py
 User=rsl
 
 [Install]
