Starting to add zed recording to record coordinator

--- a/box_drivers/zed2i_recording_driver/CMakeLists.txt
+++ b/box_drivers/zed2i_recording_driver/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(CUDA ${ZED_CUDA_VERSION} REQUIRED)
 
 add_service_files(
   DIRECTORY srv
-  FILES start_recording_svo.srv
+  FILES StartRecordingSVO.srv
 )
 
 generate_messages(
