--- a/box_utils/box_recording/package.xml
+++ b/box_utils/box_recording/package.xml
@@ -16,5 +16,6 @@
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
   <depend>std_msgs</depend>
+  <depend>zed2i_recording_driver_ros</depend>
   
 </package>
