--- a/box_configuration/pi/autostart_tmux.service
+++ b/box_configuration/pi/autostart_tmux.service
@@ -2,11 +2,12 @@
 Description=Autostart Terminal and Run tmuxp
 After=network-online.target
 After=phc2sys_eth0.service
+After=autostart_set_fan_speed.service
 
 [Service]
 Type=forking
-ExecStartPre=/bin/sleep 30
-ExecStart=/usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/pi_recording.yaml -d
+ExecStartPre=/bin/sleep 10
+ExecStart=sudo /usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/pi_recording.yaml -d
 User=rsl
 
 [Install]
