--- a/box_configuration/pi/50-cloud-init.yaml
+++ b/box_configuration/pi/50-cloud-init.yaml
@@ -1,12 +1,18 @@
 # Let NetworkManager manage all devices on this system
 # Copy to /etc/netplan/
 network:
-    ethernets:
-        eth0:
-            addresses:
-              - 192.168.2.57/24
-            dhcp4: no
-            gateway4: 192.168.2.51
-            nameservers:
-              addresses: [8.8.8.8]
-    version: 2
+  renderer: networkd
+  ethernets:
+    eth0:
+      addresses:
+        - 192.168.2.57/24
+      dhcp4: false
+      dhcp6: false
+      gateway4: 192.168.2.51
+      nameservers:
+        addresses: [8.8.8.8]
+      routes:
+        - to: 0.0.0.0/0
+          via: 192.168.2.51
+
+  version: 2
