fixed bugs and added integration test

--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -9,12 +9,12 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>launch_scripts</depend>
-  <depend>bringup_alphasense</depend>
   <!--Disable until CPT-7 Arrives-->
   <!--<depend>bringup_gps</depend>-->
   <depend>bringup_stim320</depend>
   <depend>bringup_ap20</depend>
   <depend>bringup_zed2i</depend>
+  <depend>bringup_zed2i_recording</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_launch</depend>
   <depend>box_recording</depend>
