removing node tag from cmakelists

--- a/box_drivers/zed2i_recording_driver/zed2i_recording_driver_node/CMakeLists.txt
+++ b/box_drivers/zed2i_recording_driver/zed2i_recording_driver_node/CMakeLists.txt
@@ -24,13 +24,13 @@ link_directories(
   ${CUDA_LIBRARY_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
-target_link_libraries(${PROJECT_NAME}_node
+target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   ${ZED_LIBRARIES}
   ${CUDA_LIBRARY}
   ${CUDA_CUDART_LIBRARY}
 )
 
-add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
