--- a/box_launch/launch_nuc/package.xml
+++ b/box_launch/launch_nuc/package.xml
@@ -13,6 +13,7 @@
   <depend>bringup_livox</depend>
   <depend>bringup_alphasense</depend>
   <depend>bringup_hesai</depend>
+  <depend>bringup_cpt7</depend>
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_launch</depend>
   <depend>box_recording</depend>
