--- a/box_configuration/jetson/ptp4l_mgbe0.service
+++ b/box_configuration/jetson/ptp4l_mgbe0.service
@@ -7,7 +7,7 @@ Requires=sync_time_once.service
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/ptp4l -f /etc/linuxptp/ptp4l.conf -i mgbe0 -H
+ExecStart=/usr/sbin/ptp4l -f /etc/linuxptp/ptp4l.conf -i mgbe0 -H -s
 
 [Install]
 WantedBy=multi-user.target
