--- a/box_configuration/pi/phc2sys_eth0.service
+++ b/box_configuration/pi/phc2sys_eth0.service
@@ -1,13 +1,13 @@
-# Copy to /lib/systemd/system/
 [Unit]
 Description=Synchronize system clock or PTP hardware clock (PHC)
 Documentation=man:phc2sys
 Requires=ptp4l_eth0.service
 After=ptp4l_eth0.service
+Before=time-sync.target
 
 [Service]
 Type=simple
-ExecStart=sudo /usr/sbin/phc2sys -s eth0 -c CLOCK_REALTIME -O 0 -S 1.0
+ExecStart=/usr/sbin/phc2sys -s eth0 -c CLOCK_REALTIME -w
 
 [Install]
 WantedBy=multi-user.target
