--- a/box_configuration/jetson/01-network-manager-all.yaml
+++ b/box_configuration/jetson/01-network-manager-all.yaml
@@ -1,6 +1,6 @@
 network:
   version: 2
-  renderer: networkd
+  renderer: NetworkManager
   ethernets:
     mgbe0:
       addresses:
@@ -11,12 +11,6 @@ network:
         - 192.168.20.1/24
       dhcp4: no
     usb0:
-      routes:
-        - to: 192.168.2.40
-          scope: link
-      dhcp4: no
-    usb1:
-      routes:
-        - to: 192.168.2.40
-          scope: link
+      addresses:
+        - 192.168.2.33/28
       dhcp4: no
