also record original ap20 topics

--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -7,6 +7,8 @@ jetson:
   ap20:
     - /gt_box/ap20/ap20_imu
     - /gt_box/ap20/prism_position
+    - /ap20/tps
+    - /ap20/imu
   tf:
     - /tf_static
     - /tf
